# voice-memo

./: .gitignore  README.md  init-dev.sh  package.json
src/: App.svelte  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  butterworth.rs  create-default-databse.sh  database.rs  default.db  main.rs
src/lib/: Menu.svelte  Recordings.svelte  TimePlot.svelte  menu.svelte  plot.svelte  recordings.svelte  types.svelte
