[package]
name = "voice-memo"
version = "0.0.0"
description = "make simple notes or datasets"
authors = ["eric carmi"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5.1"
cpal = "0.15.2"
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4.31"
anyhow = "1.0.75"
rustfft = "6.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
